--- a/Сoursework (console)/Сoursework (console).vcxproj.filters
+++ b/Сoursework (console)/Сoursework (console).vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="GetRandomNumber.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
