--- a/Сoursework (console)/Сoursework (console).vcxproj
+++ b/Сoursework (console)/Сoursework (console).vcxproj
@@ -117,11 +117,13 @@
   <ItemGroup>
     <ClInclude Include="RandomNumber.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RandomNumber.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Point.cpp" />
+    <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
