--- a/Сoursework (console)/Сoursework (console).vcxproj
+++ b/Сoursework (console)/Сoursework (console).vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="RandomNumber.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Semicircle.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
@@ -127,6 +128,7 @@
     <ClCompile Include="RandomNumber.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="Semicircle.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
