--- a/Сoursework (console)/Сoursework (console).vcxproj.filters
+++ b/Сoursework (console)/Сoursework (console).vcxproj.filters
@@ -57,4 +57,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
