--- a/Сoursework (console)/Сoursework (console).vcxproj.filters
+++ b/Сoursework (console)/Сoursework (console).vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Файлы заголовков\Figures">
+      <UniqueIdentifier>{f1880755-4134-45c5-82ae-1dae559bbbe6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\Figures">
+      <UniqueIdentifier>{33abb559-38fb-4c1b-adda-edc2f3910c0a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h">
@@ -25,16 +31,16 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Rectangle.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="Triangle.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="Figure.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
     <ClInclude Include="Semicircle.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Triangle.h">
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Figure.h">
+      <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -44,17 +50,17 @@
     <ClCompile Include="RandomNumber.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Rectangle.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Triangle.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="Figure.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\Figures</Filter>
+    </ClCompile>
+    <ClCompile Include="Rectangle.cpp">
+      <Filter>Исходные файлы\Figures</Filter>
     </ClCompile>
     <ClCompile Include="Semicircle.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\Figures</Filter>
+    </ClCompile>
+    <ClCompile Include="Triangle.cpp">
+      <Filter>Исходные файлы\Figures</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
