--- a/Сoursework (console)/Сoursework (console).vcxproj
+++ b/Сoursework (console)/Сoursework (console).vcxproj
@@ -125,11 +125,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Figure.cpp" />
+    <ClCompile Include="Point.cpp" />
     <ClCompile Include="RandomNumber.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Semicircle.cpp" />
     <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
