--- a/Сoursework (procedural)/Сoursework (procedural).vcxproj
+++ b/Сoursework (procedural)/Сoursework (procedural).vcxproj
@@ -20,10 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{94AE1DFE-1F86-4137-B47B-A85E5D13CD23}</ProjectGuid>
-    <RootNamespace>Сourseworkconsole</RootNamespace>
+    <ProjectGuid>{BDF255F4-1054-4889-8D37-AF01E526687C}</ProjectGuid>
+    <RootNamespace>Сourseworkprocedural</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>Сoursework (OOP)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,26 +115,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Figure.h" />
-    <ClInclude Include="RandomNumber.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="Semicircle.h" />
-    <ClInclude Include="Triangle.h" />
-    <ClInclude Include="Vector.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Figure.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="RandomNumber.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
-    <ClCompile Include="Semicircle.cpp" />
-    <ClCompile Include="Triangle.cpp" />
-    <ClCompile Include="Vector.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
