--- a/Сoursework (procedural)/Сoursework (procedural).vcxproj
+++ b/Сoursework (procedural)/Сoursework (procedural).vcxproj
@@ -115,6 +115,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Figure.h" />
+    <ClInclude Include="Point.h" />
+    <ClInclude Include="RandomNumber.h" />
+    <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Semicircle.h" />
+    <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
