--- a/Coursework (OOP)/Coursework (OOP).vcxproj
+++ b/Coursework (OOP)/Coursework (OOP).vcxproj
@@ -20,37 +20,36 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{94AE1DFE-1F86-4137-B47B-A85E5D13CD23}</ProjectGuid>
-    <RootNamespace>Сourseworkconsole</RootNamespace>
+    <ProjectGuid>{F8D6A0C1-2983-4559-ACEC-BBAB94651E0F}</ProjectGuid>
+    <RootNamespace>CourseworkOOP</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>Сoursework (OOP)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -116,26 +115,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Figure.h" />
-    <ClInclude Include="RandomNumber.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="Rectangle.h" />
-    <ClInclude Include="Semicircle.h" />
-    <ClInclude Include="Triangle.h" />
-    <ClInclude Include="Vector.h" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Figure.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Main.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Point.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\RandomNumber.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Rectangle.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Semicircle.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Triangle.cpp" />
+    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Figure.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="RandomNumber.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Rectangle.cpp" />
-    <ClCompile Include="Semicircle.cpp" />
-    <ClCompile Include="Triangle.cpp" />
-    <ClCompile Include="Vector.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Figure.h" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Point.h" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\RandomNumber.h" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Rectangle.h" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Semicircle.h" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Triangle.h" />
+    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
