--- a/Coursework (OOP)/Coursework (OOP).vcxproj.filters
+++ b/Coursework (OOP)/Coursework (OOP).vcxproj.filters
@@ -21,51 +21,51 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Main.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Point.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\RandomNumber.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Vector.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Figure.cpp">
+    <ClCompile Include="Figure.cpp">
       <Filter>Исходные файлы\Figures</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Rectangle.cpp">
+    <ClCompile Include="Rectangle.cpp">
       <Filter>Исходные файлы\Figures</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Semicircle.cpp">
+    <ClCompile Include="Semicircle.cpp">
       <Filter>Исходные файлы\Figures</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Triangle.cpp">
+    <ClCompile Include="Triangle.cpp">
       <Filter>Исходные файлы\Figures</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Point.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="RandomNumber.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector.cpp">
+      <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Figure.h">
+    <ClInclude Include="Figure.h">
       <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Rectangle.h">
+    <ClInclude Include="Rectangle.h">
       <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Semicircle.h">
+    <ClInclude Include="Semicircle.h">
       <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Triangle.h">
+    <ClInclude Include="Triangle.h">
       <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Point.h">
+    <ClInclude Include="Point.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\RandomNumber.h">
+    <ClInclude Include="RandomNumber.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Artem\Desktop\ConsoleCourseProject-OOP-\Сoursework (console)\Vector.h">
+    <ClInclude Include="Vector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
