--- a/Сoursework (procedural)/Сoursework (procedural).vcxproj.filters
+++ b/Сoursework (procedural)/Сoursework (procedural).vcxproj.filters
@@ -23,25 +23,25 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RandomNumber.h">
+    <ClInclude Include="Figure2.h">
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Rectangle2.h">
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Semicircle2.h">
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Triangle2.h">
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Point2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Figure.h">
-      <Filter>Файлы заголовков\Figures</Filter>
-    </ClInclude>
-    <ClInclude Include="Semicircle.h">
-      <Filter>Файлы заголовков\Figures</Filter>
-    </ClInclude>
-    <ClInclude Include="Triangle.h">
-      <Filter>Файлы заголовков\Figures</Filter>
-    </ClInclude>
-    <ClInclude Include="Rectangle.h">
-      <Filter>Файлы заголовков\Figures</Filter>
-    </ClInclude>
-    <ClInclude Include="Point.h">
+    <ClInclude Include="RandomNumber2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Vector.h">
+    <ClInclude Include="Vector2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
