--- a/GUI/GUI.vcxproj
+++ b/GUI/GUI.vcxproj
@@ -168,7 +168,7 @@
     <ClCompile Include="..\Coursework (OOP)\Triangle.cpp" />
     <ClCompile Include="..\Coursework (OOP)\Vector.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="CppCLR_WinformsProjekt.cpp" />
+    <ClCompile Include="CppCLR_Winforms.cpp" />
     <ClCompile Include="Form1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -179,6 +179,11 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.h</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
