Add new file 'IFigure.h'

--- a/Coursework (OOP)/Coursework (OOP).vcxproj.filters
+++ b/Coursework (OOP)/Coursework (OOP).vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="Vector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="IFigure.h">
+      <Filter>Файлы заголовков\Figures</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
