--- a/Coursework (OOP)/Coursework (OOP).vcxproj
+++ b/Coursework (OOP)/Coursework (OOP).vcxproj
@@ -43,6 +43,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
+    <CLRSupport>true</CLRSupport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -126,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Figure.h" />
+    <ClInclude Include="IFigure.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="RandomNumber.h" />
     <ClInclude Include="Rectangle.h" />
