Add some changes

--- a/Coursework (OOP)/Coursework (OOP).vcxproj.filters
+++ b/Coursework (OOP)/Coursework (OOP).vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>Файлы заголовков\Figures</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
