--- a/Сoursework (procedural)/Сoursework (procedural).vcxproj
+++ b/Сoursework (procedural)/Сoursework (procedural).vcxproj
@@ -126,6 +126,9 @@
     <ClInclude Include="Triangle2.h" />
     <ClInclude Include="Vector2.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
