--- a/GUI/GUI.vcxproj.filters
+++ b/GUI/GUI.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Form1.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="TestingForm.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
@@ -69,6 +72,9 @@
     </ClCompile>
     <ClCompile Include="..\Coursework (OOP)\Vector.cpp">
       <Filter>Geom</Filter>
+    </ClCompile>
+    <ClCompile Include="TestingForm.cpp">
+      <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
